fixed styling of signup and login page, fixed bug with mobile menu, added feature on mobile menu to exit it when link is clicked

--- a/public/styles/partials/_genericStyling.scss
+++ b/public/styles/partials/_genericStyling.scss
@@ -4,6 +4,10 @@ html {
     -webkit-text-size-adjust: 100%
 }
 
+.no-scroll {
+    overflow-y: hidden;
+}
+
 body {
     margin: 0
 }
