--- a/public/styles/partials/_signUpStyling.scss
+++ b/public/styles/partials/_signUpStyling.scss
@@ -2,7 +2,7 @@
 
 // Sign up page styling
 .signup-header {
-    height: 9vh;
+    height: 7vh;
 
     nav .header-nav {
         position: relative;
@@ -11,7 +11,7 @@
 }
 
 .form-container {
-    height: auto;
+    height: 65vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
